k8_manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: azure-poc-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: azure-poc-prod
