k8_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: flask-container
        image: mypocacr2242.azurecr.io/myapp:latest
        ports:
        - containerPort: 5000
