k8_manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: "*"  # since I don't have any registered domain, I will use application gateway IP.
    http:
      paths:
      - path: /live
        pathType: Exact
        backend:
          service:
            name: my-app-service
            port:
              number: 80
